--- a/sqhgxsq.com/next/sqhgxsq_1.css
+++ b/sqhgxsq.com/next/sqhgxsq_1.css
@@ -1,6 +1,9 @@
 *{
     margin: 0;padding: 0;
 }
+body{
+    background-color: #000;
+}
 .sqhgxsq_1_bgi_1{
     width: 100%;height: 100vh;
     background-image: url("./Material/xxzhy_3.jpg");
