--- a/Sign.css
+++ b/Sign.css
@@ -4,7 +4,7 @@
 }
 body {
     height: 100vh;
-    background: url("./sqhgxsq.com/next/Material/msdxtdxz.jpg") no-repeat;
+    background: url("https://static-mp-54c94446-e6a2-431f-84c4-ed0d181ae263.next.bspapp.com/Material/msdxtdxz.jpg") no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
