--- a/sqhgxsq.com/next/sqhgxsq_1.css
+++ b/sqhgxsq.com/next/sqhgxsq_1.css
@@ -6,7 +6,7 @@ body{
 }
 .sqhgxsq_1_bgi_1{
     width: 100%;height: 100vh;
-    background-image: url("./Material/xxzhy_3.jpg");
+    background-image: url("https://static-mp-54c94446-e6a2-431f-84c4-ed0d181ae263.next.bspapp.com/Material/xxzhy_3.jpg");
     background-size:cover;
     background-repeat: no-repeat;
     display: flex;
