--- a/sqhgxsq.com/next/sqhgxsq_1.css
+++ b/sqhgxsq.com/next/sqhgxsq_1.css
@@ -1,9 +1,11 @@
 *{
-    margin: 0;padding: 0;
+    margin: 0;
+    padding: 0;
 }
 body{
     background-color: #000;
     touch-action: manipulation;
+    overflow-x: hidden;
 }
 .sqhgxsq_1_bgi_1{
     width: 100vw;height: 100vh;
