--- a/sqhgxsq.com/next/sqhgxsq_2.css
+++ b/sqhgxsq.com/next/sqhgxsq_2.css
@@ -23,16 +23,16 @@
 
   .container {
     transform: scale(0.5);
-    width: 100%;
-    height: 100vh;
+    /* width: 100%; */
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .player {
-    width: 35rem;
-    height: 70rem;
+    width: 40vw;
+    height: 100vh;
     background: linear-gradient(to right, #313234, #2f3031);
     box-shadow: 0 1rem 5rem rgba(0, 0, 0, 0.4);
     border-radius: 3rem;
