--- a/Sign.css
+++ b/Sign.css
@@ -11,7 +11,7 @@ body {
 .bgi{
     height: 100vh;
     width: 100vw;
-    background: url("https://static-mp-54c94446-e6a2-431f-84c4-ed0d181ae263.next.bspapp.com/Material/msdxtdxz.jpg") no-repeat;
+    background: url("https://upload-bbs.miyoushe.com/upload/2024/09/24/198629752/2c67234794341ceb8cbe6f94d4d1c6b3_8139110509429319577.jpg") no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
