--- a/sqhgxsq/next/sqhgxsq_1.css
+++ b/sqhgxsq/next/sqhgxsq_1.css
@@ -9,7 +9,7 @@ body{
 }
 .sqhgxsq_1_bgi_1{
     width: 100vw;height: 100vh;
-    background-image: url("https://static-mp-54c94446-e6a2-431f-84c4-ed0d181ae263.next.bspapp.com/Material/xxzhy_3.jpg");
+    background-image: url("https://upload-bbs.miyoushe.com/upload/2024/09/24/198629752/73d1209ef1e0c546ce9f2494ff206f57_1451895088872983224.jpg");
     background-size:cover;
     background-repeat: no-repeat;
     display: flex;
