--- a/sqhgxsq/next/sqhgxsq_2.css
+++ b/sqhgxsq/next/sqhgxsq_2.css
@@ -95,7 +95,7 @@
     width: 100%;
     height: 100%;
     background-color: #101112;
-    background-image: url("https://static-mp-54c94446-e6a2-431f-84c4-ed0d181ae263.next.bspapp.com/Material/Natlan_HOYO_MiX.jpg");
+    background-image: url("https://upload-bbs.miyoushe.com/upload/2024/09/24/198629752/53a294d9d14944547022629c93e20bea_4790324169380082221.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
