--- a/header.css
+++ b/header.css
@@ -3,7 +3,7 @@ header{
     background: #1F1F1F;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -15,6 +15,8 @@ header{
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+
+    margin: 0 20px;
 }
 
 
@@ -45,4 +47,17 @@ header{
     color: gainsboro;
     font-size: larger;
     letter-spacing: 2px;
+
+    margin: 0 20px;
 }
+
+.he2 a{
+    font-style: normal;
+    color: white;
+    text-decoration: none;
+}
+
+.he2 a:hover{
+    color: gainsboro;
+}
+
