--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "JetBrains Sans",Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Droid Sans","Helvetica Neue",Arial,sans-serif;
 }
 
 body{
     overflow-x: hidden;
     width: 100%;
+    background-color: #000000;
 }
