--- a/p2.css
+++ b/p2.css
@@ -65,7 +65,6 @@
 
 .p2-p2-p2{
     width: 100%;
-    height: 80vh;
     background-color: #1B093F;
 
     border-radius: 20px;
@@ -111,7 +110,7 @@
 
     margin: 20px;
 
-    max-width: 380px;
+    width: 380px;
     height: 120px;
     outline: 1px solid #7B61FF;
     outline-offset: 0px;
