--- a/p4.css
+++ b/p4.css
@@ -1,4 +1,4 @@
-.p2{
+.p4{
     width: 100vw;
     background-color: #000000;
     color: white;
@@ -8,7 +8,7 @@
     align-items: center; 
 }
 
-.p2-p2{
+.p4-p2{
     width: 90vw;
     padding: 10px;
     display: flex;
@@ -19,7 +19,7 @@
 }
 
 
-.p2-p2-p1{
+.p4-p2-p1{
     margin: 40px 20px;
 }
 
@@ -30,13 +30,13 @@
 
 
 
-.p2-p2-p1-p1{
+.p4-p2-p1-p1{
     font-size: 32px;
     font-weight: 600;
-    color: #8473FF;
+    color: #08D9B3;
 }
 
-.p2-p2-p1-p2{
+.p4-p2-p1-p2{
     font-size: 64px;
     font-weight: 600;
 }
@@ -56,16 +56,9 @@
 
 
 
-
-
-
-
-
-
-
-.p2-p2-p2{
+.p4-p2-p2{
     width: 100%;
-    background-color: #1B093F;
+    background-color: #001E22;
 
     border-radius: 20px;
 
@@ -73,7 +66,7 @@
     padding-bottom: 70px;
 }
 
-.p2-p2-p2-p1{
+.p4-p2-p2-p1{
     font-size: 36px;
     font-weight: 600;
     margin: 50px 40px;
@@ -89,7 +82,7 @@
 
 
 
-.p2-p2-p2-p2{
+.p4-p2-p2-p2{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -102,10 +95,10 @@
 
 
 
-.card1{
+.card2{
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: flex-start;
     /* flex-wrap: wrap; */
 
@@ -113,43 +106,44 @@
 
     margin: 20px;
 
-    width: 380px;
-    height: 120px;
-    outline: 1px solid #7B61FF;
+    width: 280px;
+    height: 200px;
+    outline: 1px solid #09AD99;
     outline-offset: 0px;
     border-radius: 20px;
-    background: linear-gradient(to right, #4618A1, #331277);
+    background: linear-gradient(to right, #07493A, #03332D);
 }
-.card1:hover{
-    background: linear-gradient(to right, #521DBF, #411695);
-    outline: 2px solid #7B61FF;
+.card2:hover{
+    background: linear-gradient(to right, #0B5842, #063F35);
+    outline: 2px solid #09AD99;
     outline-offset: 0px;
     cursor: pointer;
 }
 
-.card1 .g1{
+.card2 .g1{
     width: 60px;
     height: 60px;
     background-image: url(https://upload-bbs.miyoushe.com/upload/2024/11/14/198629752/eddd882bcfee6a68725565d5ed71f9bf_7674957440032934938.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    margin: 0 30px;
+    margin: 20px 20px;
 }
-.card1 .g2{
+.card2 .g2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
+    margin: 0 20px;
 }
 
-.card1 .g2 .c1{
+.card2 .g2 .c1{
     font-size: 20px;
     line-height: 2rem;
     font-weight: 500;
 }
-.card1 .g2 .c2{
+.card2 .g2 .c2{
     font-size: 16px;
     line-height: 2rem;
     font-weight: 500;
@@ -167,13 +161,13 @@
 
 
 @media screen and (max-width:600px) {
-    .p2-p2-p1-p1{
+    .p4-p2-p1-p1{
         font-size: 24px;
     }
-    .p2-p2-p1-p2{
+    .p4-p2-p1-p2{
         font-size: 32px;
     }
-    .p2-p2-p2-p1{
+    .p4-p2-p2-p1{
         font-size: 24px;
     }
 }
