--- a/p3.css
+++ b/p3.css
@@ -29,6 +29,29 @@
     color: white;
 }
 
+
+
+.p3-p1-p1{
+    width: 1920px;
+    height: 1080px;
+    z-index: -1;
+    opacity: 0;
+    position:absolute;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .p3-p1-p2-p1{
     width: 80vw;
     font-size: 42px;
