--- a/index.css
+++ b/index.css
@@ -8,4 +8,10 @@ body{
     overflow-x: hidden;
     width: 100%;
     background-color: #000000;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
