--- a/p3.css
+++ b/p3.css
@@ -32,12 +32,22 @@
 
 
 .p3-p1-p1{
-    width: 1px;
+    width: 0px;
     height: 1080px;
     z-index: -1;
     opacity: 0;
     position:absolute;
 }
+
+
+@media screen and (max-width:600px) {
+    .p3-p1-p1{
+        display: none;
+    }
+}
+
+
+
 
 
 
