--- a/p5.css
+++ b/p5.css
@@ -64,7 +64,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
+    background-position: right;
     border-radius: 20px;
 
     margin-bottom: 20px;
