--- a/shop/p2.css
+++ b/shop/p2.css
@@ -22,9 +22,90 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
 }
 
 
 .t1{
+    width: 200px;
+    height: 300px;
+    overflow: hidden;
+    color: black;
+    margin: 10px;
 
+    border-bottom: 5px solid;
+    border-color: white;
+
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+
+.t1:hover{
+    cursor: pointer;
+    border-color:red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.box1{
+    width: 190px;
+    height: 200px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+
+
+.box2{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* margin: 10px; */
+    text-align: left;
+}
+
+
+.box2 div:nth-child(1){
+    font-size: 14px;
+    font-weight: 500;
+}
+
+
+.box2 div:nth-child(2){
+    color: red;
+}
+
+.box2 div:nth-child(3){
+    font-size: 12px;
+}
+
+
+.box2 div{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-wrap: wrap;
+    margin-left: 10px;
+    margin-right: 10px;
 }
