--- a/shop/p1.css
+++ b/shop/p1.css
@@ -5,6 +5,7 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
+    /* background-image: url("https://act-webstatic.mihoyo.com/puzzle/hk4e/pz_KxNjrg_3PR/resource/puzzle/2025/08/26/3c5f22cee277e1dc7eeac4faafd46d7c_379162374679059505.png?x-oss-process=image/format,webp/quality,Q_90"); */
     background-image: url('https://upload-bbs.miyoushe.com/upload/2024/11/16/198629752/c45269cab50176c09cab677fbf78d06a_4847520799201985589.png');
     background-size: cover;
     background-repeat: no-repeat;
